--- a/cv.html
+++ b/cv.html
@@ -28,11 +28,11 @@
 			 	</td>
 			</tr>
 			<tr id="2">
-			 	<td> <b> Objective </b> </td>
+			 	<td> Objective </td>
 			 	<td> Still Thinking </td>
 			</tr>
 			<tr id="3">
-			 	<td> <b> Education </b></td>
+			 	<td> <b> Education </b> </td>
 				<td>
 
 			 			<table border="1" width="100%">
@@ -48,7 +48,7 @@
 			 	</td>
 			</tr>
 			<tr id="4">
-			 	<td> <b> Work </b> </td>
+			 	<td><b> Work </b></td>
 			 	<td> Commerce One Realty - Licensed Real estate Salesperson </td>
 			 	
 			</tr>
