--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
-<head>
+<head id="top">
 	<title>Hershel Lowy</title>
+		<link rel="icon" type="image/png" href="favicon.png">
+			<!-- description to show in google search -->
+			<meta name="description" content="hershel lowy bio"> 
+			<!--  for google keywords search -->
+			<meta name="keywords" content="Hershel, lowy, hershel lowy"> 
+			<!-- refresh and takes to other site after entered seconds -->
+			<!-- meta http-equiv="refresh" content="5; url=http://www.google.com"--> 
+
 </head>
 <body>
 <div id="wrap">
 	<nav>
 			<ul>
-				<li> <a href="index.html"> Home </a></li>
-				<li> <a href="cv.html"> CV </a></li>
-				<li> <a href="contact.html"> Contact </a></li>
+				<li> <a href="index.html"> Home </a> </li>
+				<li> <a href="cv.html"> CV </a> </li>
+				<li> <a href="contact.html"> Contact </a> </li>
 
 			</ul>
 	</nav>
@@ -19,15 +27,41 @@
 		<img src="https://placekitten.com/200/300"
 	</section>
 	<section>
-		<p>
-			Paragraph 
-		</p>
-		<p>
-			Paragraph 
-		</p>
+
+		<audio controls> 
+			<source src="horse.ogg" type="audio/ogg">
+			 <source src="horse.mp3" type="audio/mpeg">
+			  Your browser does not support the audio element. 
+		</audio> 
+
+		<video width="200" height="auto" controls>
+			 <source src="movie.mp4" type="video/mp4">
+			 <source src="movie.ogg" type="video/ogg">
+ 				Your browser does not support the video tag.
+		</video>
+
+		<iframe width="30%" height="300" src="https://www.youtube.com/embed/cVPCC6V3xRs" frameborder="0" allowfullscreen></iframe>
+		<iframe width="30%" height="300" src="https://www.alolsen.net/CUNY/citytech" frameborder="0" allowfullscreen></iframe>
 
 
 	</section>
+	<section>
+		<p>
+			Paragraph 
+		</p>
+		<p>
+			Paragraph 
+		</p>
+		<!-- image with link -->
+			<a href="http://www.facebook.com">
+				<img src="exefbLogo.png"> 
+			</a>
+
+
+	</section>
+	<footer> &copy; Designed and coded by Hershel Lowy </footer>
+
+	<a href="#top"> Click here to go to top of site </a>
 
 </body>
 </html>
