updated table in cv page, added web dev page, fix syntax errors

--- a/cv.html
+++ b/cv.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 	<title>Hershel Lowy</title>
+	<link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
-
+<h1> Hershel Lowy </h1>
+<h2> CV </h2>
 <div id="wrap">
 	<nav>
 			<ul>
 				<li> <a href="index.html"> Home </a></li>
 				<li> <a href="cv.html"> CV </a></li>
+				<li> <a href="webdev.html"> Web Development </a> </li>
 				<li> <a href="contact.html"> Contact </a></li>
 
 			</ul>
@@ -19,39 +22,68 @@
 	<h1> CV </h1>
 
 	<table border="1" width="800px">
-			<tr id="1">
+			<tr>
 			 	<td colspan="2">
 			 		<h1>Hershel Lowy</h1>
-			 		<span> 84 Broadway 4B, Brooklyn NY 11249 </span>
+			 		<span> ADDRESS: 84 Broadway 4B, Brooklyn NY 11249 </span>
 			 		<br>
-			 		718-635-1718 Hershylowy1@gmail.com
+			 		PHONE: 718-635-1718 EMAIL: Hershylowy1@gmail.com
 			 	</td>
-			</tr>
-			<tr id="2">
-			 	<td> Objective </td>
-			 	<td> Still Thinking </td>
-			</tr>
-			<tr id="3">
-			 	<td> <b> Education </b> </td>
+	</table>
+	<br/> 
+
+	<table border="1" width="800px">
+		
+			<tr>
+			 	<td> <b> Experience </b> </td>
 				<td>
 
-			 			<table border="1" width="100%">
+			 			<table border="1" width="800px">
 			 				<tr>
 	
-			 					<td>  CUNY </td>
-			 					<td> Web Developement - 2016 </td>
+			 					<td>  Commerce One Realty </td>
+			 					<td> Licensed Real Estate Salesperson </td>
+
 			 				</tr>
 			 				<tr>
-			 					<td colspan="3"> HTML, CSS, JS </td>
+			 					<td colspan="3"> Commercial Industrial Real Estate Sales and Leases in the outer boroughs, Brooklyn, Queens, Bronx and Staten Island.  </td>
 			 				</tr>
 			 			</table>
+			 			<table border="1" width="800px">
+			 				<tr>
+	
+			 					<td>  Pinnacle Realty of NY </td>
+			 					<td> Licensed Real Estate Salesperson </td>
+			 				</tr>
+			 				<tr>
+			 					<td colspan="3"> Commercial Real Estate Sales and Leases  </td>
+			 				</tr>
+			 			</table>
+				
+			 			<table border="1" width="800px">
+			 				<tr>
+	
+			 					<td>  Caring Professionals   </td>
+			 					<td> Program Director at Social Adult Day Care Center  </td>
+			 				</tr>
+			 				<tr>
+			 					<td colspan="3"> Responsible for the Development for Cummunity day care center, as well as the day to day activities, Management Marketing, Logistics, HR, Healthcare Agency Comppliance and more.  </td>
+			 				</tr>
+			 			</table>
+
+
 			 	</td>
 			</tr>
-			<tr id="4">
-			 	<td><b> Work </b></td>
-			 	<td> Commerce One Realty - Licensed Real estate Salesperson </td>
-			 	
+			<tr>
+			 	<td rowspan="2"><b> Education </b></td>
+			 	<td> CUNY - Full Stack Web development  </td>
+			 	<td> 2016 </td>
+	
 			</tr>
+					<td> GED - St. Nicks Alliance </td>
+					<td> Current </td>
+			<tr>
+
 			
 
 		
