--- a/webdev.html
+++ b/webdev.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h1> Hershel Lowy </h1>
-<h2>Home</h2>
+<h2> Web Development</h2>
 <div id="wrap">
 	<nav>
 			<ul>
@@ -27,25 +27,27 @@
 	</nav>
 	</div>
 
-	
+
+
+<section>
+		<img src="https://placekitten.com/200/300"
+	</section>
 	<section>
-		<h1> Welcome to me Personal Website! </h1>
-		<p>
-			Paragraph 
-		</p>
-		<p>
-			Paragraph 
-		</p>
-		<!-- image with link -->
-			<a href="http://www.facebook.com">
-				<img src="exefbLogo.png"> 
-			</a>
+
+		<audio controls> 
+			<source src="horse.ogg" type="audio/ogg">
+			 <source src="horse.mp3" type="audio/mpeg">
+			  Your browser does not support the audio element. 
+		</audio> 
+
+		<video width="200" height="auto" controls>
+			 <source src="movie.mp4" type="video/mp4">
+			 <source src="movie.ogg" type="video/ogg">
+ 				Your browser does not support the video tag.
+		</video>
+
+		<iframe width="30%" height="300" src="https://www.youtube.com/embed/cVPCC6V3xRs" frameborder="0" allowfullscreen></iframe>
+		<iframe width="30%" height="300" src="https://www.alolsen.net/CUNY/citytech" frameborder="0" allowfullscreen></iframe>
 
 
 	</section>
-	<footer> &copy; Designed and coded by Hershel Lowy </footer>
-
-	<a href="#top"> Click here to go to top of site </a>
-
-</body>
-</html>
