--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 	<title>Hershel Lowy</title>
+	<link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
+<h1> Hershel Lowy </h1>
+<h2>Contact</h2>
 <div id="wrap">
 	<nav>
 			<ul>
 				<li> <a href="index.html"> Home </a></li>
 				<li> <a href="cv.html"> CV </a></li>
+				<li> <a href="webdev.html"> Web Development </a> </li>
 				<li> <a href="contact.html"> Contact </a></li>
 
 			</ul>
@@ -57,7 +61,7 @@
 		<tr>
 			<td>Messege</td>
 			<td>
-				<textarea name="userMessage"></textarea>
+				<textarea name="userMessage"> </textarea>
 			</td>
 		</tr>
 		<tr>
