--- a/cv.html
+++ b/cv.html
@@ -29,14 +29,19 @@
 			 		<br>
 			 		PHONE: 718-635-1718 EMAIL: Hershylowy1@gmail.com
 			 	</td>
+			 	<td>
+			 		
+			 		NEW COLUMN
+			 	</td>
+			 </tr>
 	</table>
 	<br/> 
 
 	<table border="1" width="800px">
 		
 			<tr>
-			 	<td> <b> Experience </b> </td>
-				<td>
+			 	<td colspan="2"> <b> Experience </b> </td>
+				<td colspan="2">
 
 			 			<table border="1" width="800px">
 			 				<tr>
@@ -75,7 +80,7 @@
 			 	</td>
 			</tr>
 			<tr>
-			 	<td rowspan="2"><b> Education </b></td>
+			 	<td rowspan="2" colspan="2"><b> Education </b></td>
 			 	<td> CUNY - Full Stack Web development  </td>
 			 	<td> 2016 </td>
 	
