--- a/webdev.html
+++ b/webdev.html
@@ -1,6 +1,6 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
-<head id="top">
+<head>
 	<title> Hershel Lowy</title>
 		<link rel="icon" type="image/png" href="favicon.png">
 			<!-- description to show in google search -->
@@ -11,7 +11,7 @@
 			<!-- meta http-equiv="refresh" content="5; url=http://www.google.com"--> 
 
 </head>
-<body>
+<body id="top">
 <h1> Hershel Lowy </h1>
 <h2> Web Development</h2>
 <div id="wrap">
@@ -52,3 +52,8 @@
 
 
 	</section>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	 <a href="#top"> GO TO TOP</a>
+</body>
+
+</html>
