--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Hershel Lowy</title>
@@ -32,14 +32,14 @@
 		</tr>
 		<tr>
 			<td>Password </td>
-			<td> <input type="passowrd" name="pass" id="pass" placeholder="Enter your Passowrd Here"/>  </td>
+			<td> <input type="password" name="pass" id="pass" placeholder="Enter your Passowrd Here"/>  </td>
 		</tr>
 		<tr>
 			<td> Class Days </td>
-			<td> <input type="checkbox" name="classday" value="m"/>M</td>
-			<td> <input type="checkbox" name="classday" value="t"/>T </td>
-			<td> <input type="checkbox" name="classday" value="w"/>W </td>
-			<td> <input type="checkbox" name="classday" value="th"/>Th </td>
+			<td> <input type="checkbox" name="classday" value="m"/>M
+			 <input type="checkbox" name="classday" value="t"/>T 
+			 <input type="checkbox" name="classday" value="w"/>W 
+			 <input type="checkbox" name="classday" value="th"/>Th </td>
 		</tr>
 		<tr>
 			<td>Birth Month</td>
